cmake_minimum_required(VERSION 3.26)
project(beginner)

set(CMAKE_CXX_STANDARD 17)

add_executable(beginner main.cpp
        Les2.cpp
        Les2.h
        Les1.cpp
        Les1.h
        Les3.cpp
        Les3.h
        Les5.cpp
        Les5.h
        Les4.cpp
        Les4.h
        Les6.cpp
        Les6.h
        OLes1.cpp
        OLes1.h
        OLes2.cpp
        OLes2.h
        OLes3.cpp
        OLes3.h
        OLes4.cpp
        OLes4.h
        OLes5.cpp
        OLes5.h
        OLes6.cpp
        OLes6.h)
