cmake_minimum_required(VERSION 3.26)
project(beginner)

set(CMAKE_CXX_STANDARD 17)

add_executable(beginner main.cpp
        lessen/les2/Les2.cpp
        lessen/les2/Les2.h
        lessen/les1/Les1.cpp
        lessen/les1/Les1.h
        lessen/les3/Les3.cpp
        lessen/les3/Les3.h
        lessen/les5/Les5.cpp
        lessen/les5/Les5.h
        lessen/les4/Les4.cpp
        lessen/les4/Les4.h
        lessen/les6/Les6.cpp
        lessen/les6/Les6.h
        lessen/les1/oefening/OLes1.cpp
        lessen/les1/oefening/OLes1.h
        lessen/les2/oefening/OLes2.cpp
        lessen/les2/oefening/OLes2.h
        lessen/les3/oefening/OLes3.cpp
        lessen/les3/oefening/OLes3.h
        lessen/les4/oefening/OLes4.cpp
        lessen/les4/oefening/OLes4.h
        lessen/les5/oefening/OLes5.cpp
        lessen/les5/oefening/OLes5.h
        lessen/les6/oefening/OLes6.cpp
        lessen/les6/oefening/OLes6.h
        lessen/les7/Les7.cpp
        lessen/les7/Les7.h
        dataStructures/DoublyLinkedList.cpp
        dataStructures/DoublyLinkedList.h
        dataStructures/DataStructuresMain.cpp
        dataStructures/DataStructuresMain.h
        lessen/les7/games/tictactoe/TicTacToe.cpp
        lessen/les7/games/tictactoe/TicTacToe.h
        lessen/les7/games/connectFour/VierOpEenRij.cpp
        lessen/les7/games/connectFour/VierOpEenRij.h
        lessen/les8/Les8.cpp
        lessen/les8/Les8.h
        lessen/les8/classes/Car.cpp
        lessen/les8/classes/Car.h
        lessen/les8/classes/CarTwo.cpp
        lessen/les8/classes/CarTwo.h
        lessen/les8/classes/Vehicle.cpp
        lessen/les8/classes/Vehicle.h
        lessen/les8/classes/Inspectable.cpp
        lessen/les8/classes/Inspectable.h
        lessen/les8/classes/Fruit.cpp
        lessen/les8/classes/Fruit.h
        lessen/les8/oefening/OLes8.cpp
        lessen/les8/oefening/OLes8.h
        lessen/les9/Les9.cpp
        lessen/les9/Les9.h
        lessen/les9/classes/basis/Dier.cpp
        lessen/les9/classes/basis/Dier.h
        lessen/les9/classes/Hond.cpp
        lessen/les9/classes/Hond.h
        lessen/les9/classes/Kat.cpp
        lessen/les9/classes/Kat.h)
